# mprisgovee

./: .SRCINFO  .gitignore  PKGBUILD  README.md  pyproject.toml
.github/workflows/: aur.yml  pypi.yml
mprisgovee/: cache.py  color.py  config.py  environment.py  govee.py  main.py  mpris.py
